<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Scanner">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:id="@+id/imageIv"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_image_24"
                android:adjustViewBounds="true"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inputImageBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/take_image"
            app:icon="@drawable/baseline_add_a_photo_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scanBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/scan_ingredients"
            app:icon="@drawable/baseline_adf_scanner_24" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Gender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/select_gender"
            />
        <!--            app:icon="@drawable/baseline_add_a_photo_24" />-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/select_category"
            />
        <!--            app:icon="@drawable/baseline_adf_scanner_24" />-->



    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Scanned Ingredients:" />

            <EditText
                android:id="@+id/scannedIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/generateRec"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="Generate Recommendations"
                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>


